--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website-r3f",
   "version": "0.1.0",
+  "homepage": "https://apolloxr.co/r3f",
   "private": true,
   "dependencies": {
     "@react-three/drei": "^10.1.2",
@@ -12,6 +13,8 @@
     "three": "^0.177.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -19,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^2.0.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "gh-pages": "^6.3.0",
     "vite": "^6.3.5"
   },
   "eslintConfig": {
